--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -208,11 +208,11 @@ boss__efk__elasticsearch_ingress_labels: |
   addonmanager.kubernetes.io/mode: Reconcile
   boss-part-of: efk
 boss__efk__elasticsearch_service_labels: |
-    k8s-app: elasticsearch-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "Elasticsearch"
-    boss-part-of: efk
+  k8s-app: elasticsearch-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "Elasticsearch"
+  boss-part-of: efk
 boss__efk__elasticsearch_persistent_volume_claim_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
@@ -233,6 +233,17 @@ boss__efk__elasticsearch_cpu_requests: 250m # 0.5 cpu
 boss__efk__elasticsearch_mem_requests: 2350Mi
 
 boss__efk__elasticsearch_stateful_set_env_ES_JAVA_OPTS: "-Xms2048m -Xmx2048m"
+
+# boss__efk__elasticsearch_stateful_set_spec_resources: False
+boss__efk__elasticsearch_stateful_set_spec_resources: |
+  # need more cpu upon initialization, therefore burstable class
+  requests:
+    cpu: 100m
+    memory: 2350Mi
+  limits:
+    cpu: 1000m
+    memory: 4048Mi
+
 boss__efk__elasticsearch_service_account_labels: |
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
@@ -259,10 +270,10 @@ boss__efk__elasticsearch_stateful_set_labels: |
 boss__efk__elasticsearch_stateful_set_spec_replicas: 1
 boss__efk__elasticsearch_stateful_set_spec_selector_match_labels: |
         k8s-app: elasticsearch-logging
-        version: v5.6.2
+        version: "{{ boss__efk__elasticsearch_version }}"
 boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels: |
         k8s-app: elasticsearch-logging
-        version: v5.6.2
+        version: "{{ boss__efk__elasticsearch_version }}"
         kubernetes.io/cluster-service: "true"
 
 #########################
@@ -332,12 +343,12 @@ boss__efk__fluentd_daemon_set_labels: |
     boss-part-of: efk
 boss__efk__fluentd_daemon_set_spec_selector_match_labels: |
       k8s-app: fluentd-es
-      version: v2.2.1
+      # version: v2.2.1
 boss__efk__fluentd_daemon_set_spec_template_metadata_labels: |
         k8s-app: fluentd-es
-        kubernetes.io/cluster-service: "true"
-        version: v2.2.1
-        boss-part-of: efk
+        # kubernetes.io/cluster-service: "true"
+        # version: v2.2.1
+        # boss-part-of: efk
 boss__efk__fluentd_daemon_set_spec_template_metadata_annotations: |
         scheduler.alpha.kubernetes.io/critical-pod: ''
         seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
@@ -347,6 +358,14 @@ boss__efk__fluentd_daemon_set_spec_template_spec_securityContext: |
   runAsNonRoot: false
   # runAsUser: 65534
   privileged: true
+
+boss__efk__fluentd_daemon_set_spec_template_spec_resources: |
+  requests:
+    cpu: 100m
+    memory: 200Mi
+  limits:
+    memory: 500Mi
+    # memory: 200Mi
 
 boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts: |
   # - name: libsystemddir
@@ -360,11 +379,13 @@ boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts: |
   - name: config-volume
     mountPath: /etc/fluent/config.d
   - name: docker-sock
-    mountPath: /var/run/docker.sock
+    # ORIG # mountPath: /var/run/docker.sock
+    mountPath: /run/containerd/containerd.sock
   - name: varrun
     mountPath: /var/run
   - name: libsystemd
-    mountPath: /usr/lib64/libsystemd.so.0
+    # mountPath: /usr/lib64/libsystemd.so.0
+    mountPath: /lib/x86_64-linux-gnu/libsystemd.so.0
 
 boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
   # It is needed to copy systemd library to decompress journals
@@ -383,7 +404,8 @@ boss__efk__fluentd_daemon_set_spec_template_spec_volumes: |
       name: fluentd-es-config-v0.1.6
   - name: docker-sock
     hostPath:
-      path: /var/run/docker/libcontainerd/docker-containerd.sock
+      # path: /var/run/docker/libcontainerd/docker-containerd.sock
+      path: /var/run/docker/containerd/containerd.sock
   - name: varrun
     hostPath:
       path: /var/run
@@ -411,33 +433,45 @@ boss__efk__kibana_cpu_limit: 1000m
 boss__efk__kibana_cpu_requests: 1000m
 
 boss__efk__kibana_deployment_labels: |
-    k8s-app: kibana-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+  k8s-app: kibana-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
 boss__efk__kibana_deployment_spec_replicas: 1
 boss__efk__kibana_deployment_spec_selector_match_labels: |
-      k8s-app: kibana-logging
+  k8s-app: kibana-logging
 boss__efk__kibana_deployment_spec_template_metadata_labels: |
-        k8s-app: kibana-logging
+  k8s-app: kibana-logging
 boss__efk__kibana_deployment_spec_template_spec_node_selector: |
-        kubernetes.io/hostname: "borg-worker-01"
+  kubernetes.io/hostname: "borg-worker-01"
 boss__efk__kibana_ingress_labels: |
-    k8s-app: kibana-ingress
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+  k8s-app: kibana-ingress
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: efk
 boss__efk__kibana_ingress_annotations: |
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
-    traefik.frontend.rule.type: PathPrefix
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
 boss__efk__kibana_service_labels: |
-    k8s-app: kibana-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "Kibana"
-    boss-part-of: efk
-############################################
+  k8s-app: kibana-logging
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "Kibana"
+  boss-part-of: efk
 
+# boss__efk__kibana_service_annotations: False
+boss__efk__kibana_service_annotations: |
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+# boss__efk__kibana_deployment_spec_template_spec_resources: False
+boss__efk__kibana_deployment_spec_template_spec_resources: |
+  # need more cpu upon initialization, therefore burstable class
+  requests:
+    cpu: 1000m
+  limits:
+    cpu: 1000m
+############################################
 
 boss__efk__elasticsearch_persistent_volume_spec_capacity_storage: 5Gi
 boss__efk__elasticsearch_persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/elasticsearch"
@@ -464,6 +498,10 @@ boss__registry__deployment_name: registry
 boss__registry__enable_pvc: false
 boss__registry__enable_tls: true
 boss__registry__tls_cert_cluster_issuer_name: selfsigning-issuer
+boss__registry__ingress_tls_config: |
+  - hosts:
+    - {{boss__registry__subdomain}}.{{domain_root}}
+    secretName: docker-registry-tls-certificate
 
 boss__registry__ingress_annotations: |
   nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
@@ -509,41 +547,41 @@ boss__registry__cpu_requests: 100m
 boss__registry__mem_requests: 200Mi
 
 boss__registry__service_account_labels: |
-    k8s-app: registry
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry
-    version: "{{ boss__registry__version }}"
+  k8s-app: registry
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: registry
+  version: "{{ boss__registry__version }}"
 boss__registry__cluster_role_labels: |
-    k8s-app: registry
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry
-    version: "{{ boss__registry__version }}"
+  k8s-app: registry
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: registry
+  version: "{{ boss__registry__version }}"
 
 boss__registry__cluster_role_binding_labels: |
-    k8s-app: registry
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry
-    version: "{{ boss__registry__version }}"
+  k8s-app: registry
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: registry
+  version: "{{ boss__registry__version }}"
 
 boss__registry__stateful_set_labels: |
-    k8s-app: registry
-    version: "{{ boss__registry__version }}"
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry
+  k8s-app: registry
+  version: "{{ boss__registry__version }}"
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: registry
 
 boss__registry__stateful_set_spec_replicas: 1
 boss__registry__stateful_set_spec_selector_match_labels: |
-        k8s-app: registry
-        version: "{{ boss__registry__version }}"
+  k8s-app: registry
+  version: "{{ boss__registry__version }}"
 
 boss__registry__stateful_set_spec_template_metadata_labels: |
-        k8s-app: registry
-        version: "{{ boss__registry__version }}"
-        kubernetes.io/cluster-service: "true"
+  k8s-app: registry
+  version: "{{ boss__registry__version }}"
+  kubernetes.io/cluster-service: "true"
 
 boss__registry__persistent_volume_spec_capacity_storage: 10Gi
 boss__registry__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/registry"
@@ -590,90 +628,136 @@ boss__certmanager__my_cluster_generate_tls: "force"
 boss__registry__ui__subdomain: registry-ui
 boss__registry__ui__manifest_path: "{{manifest_dir_path}}/registry-ui"
 boss__registry__ui__namespace_name: default
-boss__registry__ui__deployment_name: registry-ui
+boss__registry__ui__deployment_name: docker-registry-ui
 boss__registry__ui__enable_pvc: false
-boss__registry__ui__enable_tls: true
+boss__registry__ui__enable_tls: "disabled"
+boss__registry__ui__ingress_tls_config: |
+  - hosts:
+    - {{boss__registry__ui__subdomain}}.{{domain_root}}
+    secretName: docker-registry-ui-tls-certificate
 boss__registry__ui__tls_cert_cluster_issuer_name: selfsigning-issuer
 
+boss__registry__ui__version: 0.6
+boss__registry__ui__image_repo: "joxit/docker-registry-ui"
+boss__registry__ui__image_tag: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__cpu_limit: 1000m
+boss__registry__ui__mem_limit: 500Mi
+boss__registry__ui__cpu_requests: 100m
+boss__registry__ui__mem_requests: 200Mi
+
+# boss__registry__ui__ingress_annotations: |
+#   nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
+#   nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+#   traefik.frontend.rule.type: PathPrefix
+
 boss__registry__ui__ingress_annotations: |
-  nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
-  nginx.ingress.kubernetes.io/rewrite-target: \"/\"
+  # FIXME: Fix this
+  # certmanager.k8s.io/issuer: "selfsigning-issuer"
+  # NOTE: This is what was configured in
+  nginx.ingress.kubernetes.io/proxy-body-size: "0"
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  # This is what we had configured
   traefik.frontend.rule.type: PathPrefix
+  # nginx.ingress.kubernetes.io/ssl-redirect: \"true\"
+  # nginx.ingress.kubernetes.io/rewrite-target: \"/\"
 
 boss__registry__ui__ingress_labels: |
-  k8s-app: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  boss-part-of: registry-ui
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__service_labels: |
-    k8s-app: registry-ui
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "KubeRegistry"
-    boss-part-of: registry-ui
-    version: "{{ boss__registry__ui__version }}"
+  app: {{boss__registry__ui__deployment_name}}
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  kubernetes.io/name: "KubeRegistry"
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__service_annotations: |
+    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+    traefik.frontend.rule.type: PathPrefix
+
+boss__registry__ui__deployment_labels: |
+  app: {{boss__registry__ui__deployment_name}}
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__deployment_spec_template_metadata_labels: |
+  app: {{boss__registry__ui__deployment_name}}
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+
+boss__registry__ui__deployment_spec_template_spec_containers_resources: |
+  requests:
+    cpu: 250m
+    memory: 64Mi
+  limits:
+    # This is 0.5 of a cpu
+    cpu: 500m
+    memory: 128Mi
 
 boss__registry__ui__persistent_volume_claim_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: registry-ui
-  boss-part-of: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__persistent_volume_claim_spec_resources_requests_storage: "2Gi"
 boss__registry__ui__persistent_volume_labels: |
   kubernetes.io/cluster-service: "true"
   addonmanager.kubernetes.io/mode: Reconcile
-  k8s-app: registry-ui
-  boss-part-of: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  boss-part-of: {{boss__registry__ui__deployment_name}}
   version: "{{ boss__registry__ui__version }}"
 
-boss__registry__ui__version: 2.6
-boss__registry__ui__image_repo: "registry"
-boss__registry__ui__image_tag: "{{ boss__registry__ui__version }}"
-boss__registry__ui__cpu_limit: 1000m
-boss__registry__ui__mem_limit: 500Mi
-boss__registry__ui__cpu_requests: 100m
-boss__registry__ui__mem_requests: 200Mi
-
 boss__registry__ui__service_account_labels: |
-    k8s-app: registry-ui
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
-    version: "{{ boss__registry__ui__version }}"
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
 boss__registry__ui__cluster_role_labels: |
-    k8s-app: registry-ui
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
-    version: "{{ boss__registry__ui__version }}"
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__cluster_role_binding_labels: |
-    k8s-app: registry-ui
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
-    version: "{{ boss__registry__ui__version }}"
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__stateful_set_labels: |
-    k8s-app: registry-ui
-    version: "{{ boss__registry__ui__version }}"
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: registry-ui
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+  kubernetes.io/cluster-service: "true"
+  addonmanager.kubernetes.io/mode: Reconcile
+  boss-part-of: {{boss__registry__ui__deployment_name}}
 
 boss__registry__ui__stateful_set_spec_replicas: 1
 boss__registry__ui__stateful_set_spec_selector_match_labels: |
-        k8s-app: registry-ui
-        version: "{{ boss__registry__ui__version }}"
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
 
 boss__registry__ui__stateful_set_spec_template_metadata_labels: |
-        k8s-app: registry-ui
-        version: "{{ boss__registry__ui__version }}"
-        kubernetes.io/cluster-service: "true"
+  k8s-app: {{boss__registry__ui__deployment_name}}
+  version: "{{ boss__registry__ui__version }}"
+  kubernetes.io/cluster-service: "true"
 
 boss__registry__ui__persistent_volume_spec_capacity_storage: 10Gi
 boss__registry__ui__persistent_volume_spec_nfs_path: "{{path_to_network_disk}}/registry-ui"
@@ -1170,11 +1254,11 @@ boss__prometheus__operator__addon_resizer_image_repo: "quay.io/coreos/addon-resi
 boss__prometheus__operator__addon_resizer_image_tag: "{{ boss__prometheus__operator__addon_resizer_version }}"
 boss__prometheus__operator__addon_resizer_deployment_spec_template_spec_containers_resources: |
   limits:
-    cpu: 50m
-    memory: 30Mi
+    cpu: 150m
+    memory: 150Mi
   requests:
-    cpu: 10m
-    memory: 30Mi
+    cpu: 100m
+    memory: 150Mi
 
 boss__prometheus__operator__prometheus_operator_version: v0.29.0
 boss__prometheus__operator__prometheus_operator_image_repo: "quay.io/coreos/prometheus-operator"
@@ -1366,7 +1450,7 @@ boss__prometheus__operator__prometheus_additional_scrape_configs: |
     honor_labels: true
 
     static_configs:
-      - targets: ['http://borg-queen-01.scarlettlab.home:19999','http://borg-worker-01.scarlettlab.home:19999','http://borg-worker-02.scarlettlab.home:19999']
+      - targets: ['192.168.1.172:19999','192.168.1.173:19999','192.168.1.174:19999']
 
 # SOURCE: https://techtran.science/2018/06/11/unifi-to-grafana-using-prometheus-and-unifi_exporter/
 # - job_name: 'unifi_exporter'
@@ -1507,6 +1591,11 @@ boss__influxdb__operator__persistent_volume_spec_nfs_path: "{{path_to_network_di
 boss__influxdb__operator__nfs_master_node_ip: "{{ nfs_server_ip_override }}"
 
 #######################
+
+boss__bootstrap__subdomain: bootstrap
+boss__bootstrap__manifest_path: "{{manifest_dir_path}}/bootstrap"
+boss__bootstrap__namespace_name: kube-system
+boss__bootstrap__deployment_name: bootstrap
 
 vagrant_playbook_enable_role_tools: "enabled"
 vagrant_playbook_enable_role_bootstrap: "enabled"
